# aros

./: .gitignore
src/: pyproject.toml
src/aros/: urls.py
src/aros/aros/: settings.py
src/aros/users/: tables.py
src/aros/users/templates/users/: users.html
src/users/: admin.py  forms.py  models.py  tables.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/: base.html
src/users/templates/users/: loggedin.html  login.html  user_create.html  user_update.html  users.html
src/users/tests/: factories.py  tests.py
