[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ihor Horobets <ihor@horobets.me>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.4"
django-extensions = "^2.2.8"
factory_boy = "^2.12.0"
django-tables2 = "^2.2.1"
django-bootstrap4 = "^1.1.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
ipdb = "^0.13.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
